istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtualservice
  namespace: istio-system
spec:
  gateways:
    - istio-gateway
  hosts:
    - "*"
  http:
    - match:
      - authority:
          exact: "istio-syste-istio-ingres-86eca-16974564-ed4c34960e26.kr.lb.naverncp.com:30002"
        port: 30002
      route:
        - destination: 
            host: nginx-service.nginx.svc.cluster.local
            port:
              number: 80
    - match:
      - authority:
          exact: "istio-syste-istio-ingres-86eca-16974564-ed4c34960e26.kr.lb.naverncp.com:30001"
        port: 30001
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
